--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@kalimahapps/vue-icons": "^1.7.1",
     "@nuxt/content": "^2.13.2",
+    "@nuxt/image": "^1.8.0",
     "nuxt": "^3.13.0",
     "vue": "latest"
   },
