--- a/package.json
+++ b/package.json
@@ -13,12 +13,8 @@
     "@kalimahapps/vue-icons": "^1.7.1",
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.0",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.13.0",
     "vue": "latest"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
   }
 }
